--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,7 +46,8 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.ChrisStayte.PhotoCollector"
         //minSdkVersion flutter.minSdkVersion
-        minSdkVersion 21
+        //minSdkVersion 21 
+        minSdkVersion 23
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
