--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   geolocator: ^8.2.0
   flutter_compass: ^0.7.0
   shared_preferences: ^2.0.13
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
