--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   shared_preferences: ^2.0.13
   uuid: ^3.0.6
   flutter_sms: ^2.3.2
+  photo_view: ^0.13.0
 
 dev_dependencies:
   flutter_test:
