--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   uuid: ^3.0.6
   flutter_sms: ^2.3.2
   photo_view: ^0.13.0
+  intl: ^0.17.0
 
 dependency_overrides:
   photo_view:
