--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -28,6 +28,8 @@
 	<string>This app needs access to camera to take photos.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This app needs access to location to geotag your photos.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This app needs access to location to geotag your photos.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
